--- a/Styles/stylesheet2.css
+++ b/Styles/stylesheet2.css
@@ -1,10 +1,11 @@
 body {
-    font-size: 25px;
+    font-size: 20px;
     margin-top: 2%;
     margin-left: 2%;
     margin-right: 2%;
     margin-bottom: 2%;
     font-family: 'Quicksand', sans-serif;
+    line-height: 1.5;
    
 }
 
@@ -22,7 +23,6 @@ body {
     grid-column: 1/2;
     text-align: center;
     font-family: 'Gloria Hallelujah', cursive;
-    font-size: 1.25em;
 }
 
 .top-nav {
@@ -33,17 +33,47 @@ body {
 .top-placeholder {
     grid-column: 4/5;
     grid-column: 4/5;
-    align-self: start;
+    align-self: center;
 }
+
+.nav-button {
+    color:  #1c3149;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+    background:#f5e8d8;
+    padding: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
+    border-radius: 30%;
+    margin-left: 30px;
+    margin-right: 30px;
+    display: inline-block;
+    border: none;
+    transition: all 0.4s ease 0s;
+    width: auto;
+    font-size: x-large;
+    }
+
+.nav-button:hover {
+    background:  #594b4d;
+    color: white;
+    letter-spacing: 1px;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+    transition: all 0.5s ease 0s;
+        }
 
 
 .landing-page {
     display: grid;
     grid-template-columns: 80% 20%;
-    grid-template-rows: 600px;
+    grid-template-rows: 500px;
     grid-column-gap: 10px;
     margin: 10px;
     margin-top: 50px;
+    margin-bottom: 3%;
     
 
 }
@@ -57,16 +87,17 @@ body {
 }
 
     .hero-photo {
-        grid-column: 1/7;
+        grid-column: 1/6;
         grid-row: 1/4;
         width: 100%;
-        height: 600px;
+        height: 100%;
         object-fit: cover;
-  
+
+        
     }
 
     .hero-part {
-        grid-column: 2/3;
+        grid-column: 2/4;
         grid-row: 2/3
     }
 
@@ -83,31 +114,32 @@ body {
 .zoo {
     grid-column: 1/5;
     grid-row: 1/5;
-    width: auto;
-    height: 600px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
-.zoo-banner {
+.hero-poga {
     grid-column: 2/4;
     grid-row: 2/4;
 }
 
-.example_a {
+.hero-poga {
     color: #fff !important;
     text-transform: uppercase;
     text-align: center;
     text-decoration: none;
     background: #1c3149;
-    padding: 30px;
+    padding: 50px;
     border-radius: 50px;
     display: inline-block;
     border: none;
     transition: all 0.4s ease 0s;
-    width: 250px;
+    width: auto;
+    font-size: large;
     }
 
-.example_a:hover {
+.hero-poga:hover {
     background: #594b4d;
     letter-spacing: 1px;
     -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
@@ -126,29 +158,132 @@ body {
 
 .body {
     grid-column: 1/2;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 25% 1fr 1fr;
+}
+
+.body-feature {
+    grid-column: 1/5;
+    grid-row: 1/2;
+}
+
+.body-img {
+    grid-column: 1/2;
+    grid-row: 2/4;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.body-text {
+    grid-column: 2/5;
+    grid-row: 2/4;
+
 }
 
 .sidebar {
     grid-column: 2/3;
+    border: 3px solid #1c3149;
+    border-radius: 5px;
+    padding: 20px;
+    background-color: #594b4d12;
+    
 }
 
-footer {
+a:link {
+    color: #1c3149;
+  }
+  
+  a:visited {
+    color: #526175;
+  }
+  
+  a:hover {
+    color: #61b337;
+  }
+  
+  a:active {
+    color: #bfc1be;
+  }
+
+
+  .body-2 {
     display: grid;
+    grid-template-columns: 80% 20%;
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px; 
+    margin-bottom: 3%;
+    grid-template-areas: "article . ";
+    margin-bottom: 3%;
+    margin-top: 5%;
+  }
+
+  .new-paragraph-feature {
+    grid-area: article;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 25% 1fr 1fr;
+}
+
+  .body-img-2 {
+    grid-column: 1/2;
+    grid-row: 1/4;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.body-text-2 {
+    grid-column: 2/5;
+    grid-row: 1/4;
+
+}
+
+.footer {
+    display: grid;
+    color: gray;
     grid-template-columns: auto auto auto;
     grid-template-rows: 1fr;
     grid-column-gap: 10px; 
+    font-size: smaller;
+    margin-top: 5%;
+    border: 1px solid #1c3149;
+    border-right-color: transparent;
+    border-left-color: transparent;
+    border-bottom-color: transparent;
+    padding-top: 10px;
+    border-radius: 5px;
 }
 
 .footer1 {
     grid-column: 1/2;
+    font-size: 20px;
 }
 
 .footer2 {
-    grid-column: 2/3;
+    grid-column: 2/3;   
+    text-align: center;
+    align-self: center;
 }
+
 
 .footer3 {
     grid-column: 3/4;
+    text-align: right;
+}
+
+.footer-link {
+        margin-left: 25px;
+        margin-right: 25px;
+}
+
+h2 {
+  margin: 0px;
+}
+
+.art-lama {
+    margin: 15px;
 }
 
 
