Added background color

--- a/Styles/stylesheet2.css
+++ b/Styles/stylesheet2.css
@@ -5,7 +5,8 @@ body {
     margin-right: 2%;
     margin-bottom: 2%;
     font-family: 'Quicksand', sans-serif;
-    line-height: 1.5;
+    line-height: 1.5;'
+    background-color: #f5e8d847;
    
 }
 
