--- a/Styles/stylesheet2.css
+++ b/Styles/stylesheet2.css
@@ -5,9 +5,7 @@ body {
     margin-right: 2%;
     margin-bottom: 2%;
     font-family: 'Quicksand', sans-serif;
-    line-height: 1.5;'
-    background-color: #f5e8d847;
-   
+    line-height: 1.5;   
 }
 
 .header {
