--- a/Styles/stylesheet2.css
+++ b/Styles/stylesheet2.css
@@ -26,13 +26,28 @@ body {
 
 .top-nav {
     grid-column: 2/4;
-
 }
 
-.top-placeholder {
+.top-placeholder-social {
     grid-column: 4/5;
-    grid-column: 4/5;
-    align-self: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.social-logos {
+    grid-row: 1/2;
+    padding: 10px;
+}
+
+.soc-bildes-logo {
+    height: 50px;
+}
+
+.placeholder {
+    grid-row: 2/3;
+    text-align: right;
+    padding: 10px;
 }
 
 .nav-button {
@@ -85,20 +100,18 @@ body {
 
 }
 
-    .hero-photo {
-        grid-column: 1/6;
-        grid-row: 1/4;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+.hero-photo {
+grid-column: 1/6;
+grid-row: 1/4;
+width: 100%;
+height: 100%;
+object-fit: cover;    
+}
 
-        
-    }
-
-    .hero-part {
-        grid-column: 2/4;
-        grid-row: 2/3
-    }
+.hero-part {
+grid-column: 2/4;
+grid-row: 2/3
+}
 
 .ad {
     grid-column: 2/3;
@@ -282,10 +295,199 @@ h2 {
 }
 
 .art-lama {
-    margin: 15px;
+    height: 300px;
 }
 
+.art-lama-landing {
+    height: 500px;
+}
+
+/* Media Quary for tablets - max width 992px*/
+@media screen and (max-width: 992px) {
+}
+
+/* Media Quary for phones - max width 992px*/
+
+@media screen and (max-width: 576px) {
+
+    body {
+        font-size: 1em;
+
+    }
+    .header {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr auto;
+    }
+    
+    .header-title {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        padding: 10px;
+    }
+    
+    .top-nav {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        padding: 10px;
+    
+    }
+    
+    .top-placeholder-social {
+        grid-column: 1/2;
+        grid-row: 3/4;
+        padding: 10px;
+    }
+    
+    .nav-button {
+      font-size: small;
+      display: block;
+        }
+/* End of header */
+    .landing-page {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1f;
+    }
+        
+    .hero-image {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1f 1fr 1fr;
+        }
+        
+        .hero-photo {
+        grid-column: 1/6;
+        grid-row: 1/4;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;    
+        }
+        
+        .hero-part {
+        grid-column: 2/4;
+        grid-row: 2/3;
+        }
+
+      /* varbut bus jādzēš 
+        .ad {
+        grid-column: none;
+        grid-row: none;
+        }*/
+
+/* Hero part ended */
+        .body-sidebar {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 3fr;
+        }
+
+        .body {
+            grid-column: 1/2;
+            grid-row: 1/4;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: auto auto auto auto;
+        }
+
+        .body-feature {
+            grid-column: 1/2;
+            grid-row: 1/2;
+        }
+
+        .body-img {
+            grid-column: 1/2;
+            grid-row: 2/3;
+        }
+
+        .ad {
+            grid-column: 1/2;
+            grid-row: 3/4;
+        }
+      
+
+        .body-text {
+            grid-column: 1/2;
+            grid-row: 4/5;
+
+        }    
+
+
+/* Body part eneded*/
+
+
+.body-2 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+}
+
+  .new-paragraph-feature {
+    grid-area: 1/2;
+    grid-row: 1/2;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+}
+
+  .body-img-2 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.body-text-2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+/* End of body-2 */
 
 
 
 
+.footer {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.footer1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    text-align: center;
+}
+
+.footer2 {
+    grid-column: 1/2;
+    grid-row: 2/3;   
+}
+
+.footer3 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    text-align: center;
+}
+
+.art-lama {
+    width: 50%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.art-lama-landing {
+    max-width: 575px;
+}
+
+.zoo {
+    max-width: 575px;
+}
+
+.sidebar {
+    display: none;
+}
+  
+}
