--- a/Styles/media_query_tablets.css
+++ b/Styles/media_query_tablets.css
@@ -1,5 +1,6 @@
-/* Media Quary for tablets - max width 992px*/
+/* Media Quary for tablets - min width 577 max width 992px*/
 @media screen and (max-width: 992px) {
+    
 
     body {
         font-size: 1em;
@@ -74,16 +75,20 @@
         grid-template-rows: 3fr;
     }
 
+    .sidebar {
+        display: none;
+    }
+    
     .body {
         grid-column: 1/2;
         grid-row: 1/4;
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-template-rows: auto auto auto auto;
     }
 
     .body-feature {
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 1/2;
     }
 
@@ -92,20 +97,36 @@
         grid-row: 2/3;
     }
 
-    .ad {
-        grid-column: 1/2;
-        grid-row: 3/4;
+    .ad-2 {
+        grid-column: 2/3;
+        grid-row: 2/3;
+        top: 50%;
+        right: 70%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        justify-items: center;
            
     }
+
+    .zoo {
+        grid-column: 1/5;
+        grid-row: 1/6;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    
     
     .hero-poga {
         grid-column: 2/4;
-        grid-row: 2/4;
+        grid-row: 2/3;
+        margin-top: auto;
     }
   
 
     .body-text {
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 4/5;
 
     }    
@@ -115,7 +136,7 @@
 .body-2 {
 display: grid;
 grid-template-columns: 1fr;
-grid-template-rows: 1fr 1fr 1fr;
+grid-template-rows: 1fr;
 }
 
     .new-paragraph-feature {
@@ -137,9 +158,12 @@ grid-template-rows: 1fr 1fr 1fr;
     }
 
 /* End of body-2 */
-.sidebar {
+.sidebar-2 {
+    display: grid;
     grid-column: 1/2;
     grid-row: 3/4;
+    margin-top: 10px;
+
 }
 
 /* end of sidebar*/
@@ -168,13 +192,19 @@ text-align: center;
 }
 
 .art-lama {
-width: 30%;
-height: auto;
-display: block;
+width: 30% !important; 
+height: auto !important;  
+min-width: 300px;
+min-height: auto;
+display: block; 
 margin-left: auto;
 margin-right: auto;
 margin-bottom: 10px;
 margin-top: 10px
+}
+
+.art-lama-tablet {
+    width: 300px !important; 
 }
 
 .art-lama-landing {
@@ -184,7 +214,11 @@ margin-top: 10px;
 }
 
 .zoo {
-max-width: 980px;
+height: 450px;
+}
+
+.ad {
+    display: none;
 }
 
 }
