--- a/Styles/stylesheet2.css
+++ b/Styles/stylesheet2.css
@@ -1,3 +1,30 @@
+* {
+    box-sizing: border-box;
+  }
+
+  form.placeholder button {
+    float: right;
+    width: 20%;
+    padding: 10px;
+    background: #1c3149;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none; /* Prevent double borders */
+    cursor: pointer;
+  }
+
+  form.placeholder button:hover {
+    background: #537faa99;
+  }
+  
+  /* Clear floats */
+  form.placeholder::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
 body {
     font-size: 20px;
     margin-top: 2%;
@@ -33,6 +60,7 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
+    text-align: right;
 }
 
 .social-logos {
@@ -123,6 +151,10 @@ grid-row: 2/3
     justify-items: center;
 }
 
+.ad-2 {
+    display: none;
+}
+
 .zoo {
     grid-column: 1/5;
     grid-row: 1/5;
@@ -201,6 +233,14 @@ grid-row: 2/3
     padding: 20px;
     background-color: #594b4d12;
     
+}
+
+.sidebar-2 {
+    grid-column: 2/3;
+    border: 3px solid #1c3149;
+    border-radius: 5px;
+    padding: 20px;
+    background-color: #594b4d12;  
 }
 
 a:link {
@@ -302,3 +342,10 @@ h2 {
     height: 500px;
 }
 
+.sidebar-2 {
+    display: none;
+}
+
+.sidebar-3 {
+    display: none;
+}
