--- a/Styles/media_query_phones.css
+++ b/Styles/media_query_phones.css
@@ -159,7 +159,7 @@
         .footer {
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr 1fr;
+            grid-template-rows: auto auto auto;
         }
 
         .footer1 {
