--- a/Styles/media_query_tablets.css
+++ b/Styles/media_query_tablets.css
@@ -171,7 +171,7 @@ grid-template-rows: 1fr;
 .footer {
 display: grid;
 grid-template-columns: 1fr;
-grid-template-rows: 1fr 1fr 1fr;
+grid-template-rows: auto auto auto;
 }
 
 .footer1 {
