--- a/Styles/stylesheet2.css
+++ b/Styles/stylesheet2.css
@@ -146,7 +146,7 @@ grid-row: 2/3
     top: 50%;
     right: 70%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: 1f 1fr 1fr 1fr;
     justify-items: center;
 }
@@ -174,7 +174,7 @@ grid-row: 2/3
     text-align: center;
     text-decoration: none;
     background: #1c3149;
-    padding: 50px;
+    padding: 40px;
     border-radius: 50px;
     display: inline-block;
     border: none;
