--- a/Styles/media_query_phones.css
+++ b/Styles/media_query_phones.css
@@ -186,7 +186,7 @@
             margin-left: auto;
             margin-right: auto;
             margin-bottom: 10px;
-            margin-top: 10px
+            margin-top: 10px;
         }
 
         .art-lama-landing {
